objects/ssot__WebStoreProductCatalog__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Webstore Product Catalog Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCatalogId__c</fullName>
        <label>Product Catalog</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebstoreId__c</fullName>
        <label>Webstore</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761220390_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebStoreProductCatalog_ProductCatalo_rel</label>
        <referenceTo>ssot__ProductCatalog__dlm</referenceTo>
        <relationshipLabel>WebStoreProductCatalog_ProductCatalo_rel</relationshipLabel>
        <relationshipName>rel_1697761220390_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761220463_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebStoreProductCatalog_WebstoreId_ma_rel</label>
        <referenceTo>ssot__WebStore__dlm</referenceTo>
        <relationshipLabel>WebStoreProductCatalog_WebstoreId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761220463_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>